style.css
body {
    font-family: 'Noto Sans JP', sans-serif;
    font-size: 16px;
    text-size-adjust: none;
    color: rgb(26, 26, 26);
    background-color: rgb(253, 225, 0);
  }
  .container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    width: 100vw;
  }

  h1, h2, h3, h4, h5, h6 {
    margin: 0;
    padding: 0;
    margin-top: 5px;
  }
  h1 {
    font-size: 2.1em;
    font-family: 'Bungee Shade';
    text-align: center;
  }

  .icons {
    display: flex;
    font-size: 2.5em;
    justify-content: space-between;
    margin-top: 10px;
  }
  
  .legal-links {
    text-align: center;
  }
  a:link {
    color: black;
  }
  a:visited {
    color: rgb(0, 0, 0);
  }
  @media (max-width: 980px) {
    body {
      font-size: 2em;
    }
}

